# open_neuron

./: .gitignore  CMakeLists.txt  LICENSE  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  build.sh  layer.cpp  layer.h  main.cpp  main.h  matrix.cpp  matrix.h  network.cpp  network.h
activation/: CMakeLists.txt  functions.cpp  functions.h
arrayhelper/: CMakeLists.txt
arrayhelper/src/: arrayhelper.h
core/: CMakeLists.txt
core/src/core/: arrayhelper.cpp  arrayhelper.h  functions.cpp  functions.h  layer.cpp  layer.h  matrix.cpp  matrix.h  network.cpp
helpers/: CMakeLists.txt  arrayhelper.cpp  arrayhelper.h
network/: CMakeLists.txt
network/src/: layer.cpp  layer.h  network.cpp  network.h
neuralmath/: CMakeLists.txt
neuralmath/src/: functions.cpp  matrix.cpp
